--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -45,7 +45,7 @@ $focus:blue;
 $active:blue;
 
 // Brand colours
-$color-brand:#223656;
+$color-brand:#ce5151;
 $color-accent:#d47d57;
 $color-lines:$black;
 $color-lines-light:#e0e0e0;
@@ -220,7 +220,7 @@ html {
 	font-family:$font-sans, sans-serif;
 	font-weight:300;
 	font-size:62.5%;
-	line-height:1.5;
+	line-height:1.3;
 	color:$color-text;
 	background-color:$color-background;
 }
@@ -241,22 +241,63 @@ body{
   }
 }
 
+
+// LAYOUT -----------------------------------
+
+
+// Defaults
+
+.container{
+	@include outer-container(1200px);
+  padding-left:10px;
+  padding-right:10px;
+}
+
+.row{
+	@include row();
+}
+
+
+// Main structure
+
 html,body{
   width:100%;
   height:100%;
 }
 
-
-// LAYOUT -----------------------------------
-
-.container{
-	@include outer-container(1200px);
-	  padding-left:10px;
-	  padding-right:10px;
+body{
+  display:flex;
+  overflow:hidden;
 }
 
-.row{
-	@include row();
+.menu{
+  width:0;
+  height:100%;
+  z-index:1;
+  background-color:$gray;
+  .menu__inner{
+    display:none;
+    padding:2rem;
+  }
+  .nav__head{
+    height:150px;
+    display:flex;
+    .header__button{
+      align-items:center;
+    }
+  }
+  nav{
+    display:block;
+    a{
+      display:block;
+    }
+  }
+}
+
+.content{
+  width:100%;
+  height:100%;
+  overflow-y:scroll;
 }
 	
 	
@@ -271,7 +312,7 @@ header{
   align-content:flex-start;
   flex-direction:column;
   .header__head{
-    background-color:white;
+    background-color:$white;
   }
   .header-head__inner{
     width:100%;
@@ -279,7 +320,6 @@ header{
     display:flex;
     flex-direction:row-reverse;
     align-items:center;
-    padding:2rem;
     .header__site-title{
       img{
 			  max-width:250px;
@@ -287,7 +327,7 @@ header{
 			  height:auto;
       }
     }
-    .header__nav{
+    .nav{
       flex-grow:2;
       nav{
         display:none;
@@ -299,16 +339,27 @@ header{
     flex-grow:2;
     background-image:url(../img/content/hero.jpg);
     background-size:cover;
-    background-position:center;
+    background-position:center bottom;
     display:flex;
     align-items:center;
+    -webkit-clip-path: polygon(0 0, 100% 6%, 100% 95%, 0 100%);
+    clip-path: polygon(0 0, 100% 6%, 100% 95%, 0 100%);
+  }
+  .header-panel__2{
+    background-color:rgba(166,85,85,.6);
+    width:100%;
+    padding:4em;
+    -webkit-clip-path: polygon(0 8%, 100% 0, 100% 100%, 0 91%);
+    clip-path: polygon(0 8%, 100% 0, 100% 100%, 0 91%);
   }
   .header-panel__content{
     color:$white;
     .panel__title{
-      font-size:2em;
+      font-size:2.2em;
+      max-width:860px;
     }
     .panel__intro{
+      max-width:730px;
     }
   }
 }// end header
@@ -316,28 +367,14 @@ header{
 
 
 
+//  GLOBALS -----------------------------------------------------------
 
-//  MENU / SITE -----------------------------------------------------------
 
-
-body{
-  display:flex;
+i{
+  color:#ce5151;
+  font-size:1.2em;
 }
 
-.menu{
-  width:0;
-  height:100%;
-  z-index:1;
-  background-color:$gray;
-  nav{
-    display:none;
-  }
-}
-
-.content{
-  width:100%;
-  height:100%;
-}
 
 
 //  FOOTER ------------------------------------------------------------
