--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -360,6 +360,8 @@ body{
 //  HEADER -----------------------------------------------------------
 
 
+$headerheight:180px;
+
 header{
   display:block;
   @include bp(600px){
@@ -371,14 +373,16 @@ header{
   }
   .header__head{
     width:100%;
-    height:150px;
+    height:$headerheight;
     position:fixed;
     background-color:$white;
     z-index:1;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%);
+    clip-path: polygon(0 0, 100% 6%, 100% 95%, 0 100%);
   }
   .header-head__inner{
     width:100%;
-    height:150px;
+    height:$headerheight;
     display:flex;
     flex-direction:row-reverse;
     align-items:center;
@@ -400,14 +404,12 @@ header{
     }
   }
   .header__panel{
-    margin-top:150px;
+    margin-top:180px;
     position:relative;
     width:100%;
     flex-grow:2;
     display:flex;
     align-items:center;
-    -webkit-clip-path: polygon(0 0, 100% 6%, 100% 95%, 0 100%);
-    clip-path: polygon(0 0, 100% 6%, 100% 95%, 0 100%);
   }
   .header-panel__backgrounds{
     position:absolute;
