--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -376,9 +376,18 @@ header{
     width:100%;
     position:fixed;
     background-color:$white;
-    z-index:1;
+    z-index:2;
     display:flex;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%);
+    clip-path: polygon(0 0, 100% 6%, 100% 95%, 0 100%);
+  }
+  .header__head-2{
+    width:100%;
+    position:fixed;
+    background-color:rgba(166,85,85,.3);
+    z-index:1;
+    height:108px;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 80%);
     clip-path: polygon(0 0, 100% 6%, 100% 95%, 0 100%);
   }
   .header-head__inner{
@@ -471,6 +480,9 @@ header{
         flex-direction:row;
       }
     }
+    .cta-button{
+      @include btn-cta(4px, $black, $white);
+    }
     
   }
 }// end header
@@ -481,13 +493,14 @@ header{
 main{
   width:100%;
   height:100%;
+  background-color:$white;
   .main__panel{
     width:100%;
     height:100%;
     display:flex;
     align-items:center;
     .main-panel__2{
-      margin-top:$headerheight;
+      margin-top:100px;
       background-color:$white;
       padding-top:6em;
       padding-bottom:6em;
@@ -532,7 +545,10 @@ i{
 }
 
 .cta-button{
-  @include btn-cta(4px, $black, $white);
+  @include btn-cta(4px, $white, $color-brand);
+  &:hover{
+    color:$white;
+  }
   margin-bottom:1em;
   text-align:center;
   @include bp(500px){
@@ -547,4 +563,5 @@ i{
 
 
 footer{
+  background-color:$black;
 }
