--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -306,7 +306,7 @@ body{
   }
   .nav__head{
     padding:0 2rem;
-    height:150px;
+    height:100px;
     display:flex;
       border-bottom:1px solid rgba(0,0,0,.1);
       box-shadow: 0 1px 0 $white;
@@ -360,7 +360,7 @@ body{
 //  HEADER -----------------------------------------------------------
 
 
-$headerheight:180px;
+$headerheight:120px;
 
 header{
   display:flex;
@@ -381,8 +381,8 @@ header{
     background-color:$white;
     z-index:2;
     display:flex;
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%);
-    clip-path: polygon(0 0, 100% 6%, 100% 95%, 0 100%);
+    //-webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%);
+    //clip-path: polygon(0 0, 100% 6%, 100% 95%, 0 100%);
   }
   .header-head__inner{
     width:100%;
@@ -411,7 +411,7 @@ header{
     }
   }
   .header__panel{
-    margin-top:180px;
+    margin-top:100px;
     position:relative;
     width:100%;
     flex-grow:2;
