--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -297,10 +297,12 @@ $containerwidth:1200px;
 
 .container{
   @include containerwidth();
-  padding-left:1em;
-  padding-right:1em;
   &.--full_width{
     max-width:100%;
+  }
+  &.--padded{
+    padding-left:2rem;
+    padding-right:2rem;
   }
 }
 
@@ -451,8 +453,6 @@ main{
   }
   .main__panel{
     width:100%;
-    padding-top:4em;
-    padding-bottom:4em;
     background:$white;
     overflow:hidden;
     @include bp(700px){
@@ -470,25 +470,46 @@ main{
       }
     }
     .panel__content{
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      height:100%;
+      @include bp(700px){
+        display:flex;
+        align-items:center;
+        justify-content:space-between;
+        height:100%;
+      }
       &.--full_width{
         justify-content:space-around;
       }
       .content__inner_half{
-        width:50%;
-        &.--image{
+        width:100%;
+        padding-top:4em;
+        padding-bottom:4em;
+        @include bp(700px){
           width:50%;
-          img{
-            width:100%;
-            height:auto;
+          padding-top:0;
+          padding-bottom:0;
+        }
+        &.--text{
+          padding-left:2rem;
+          padding-right:4rem;
+        }
+        &.--image{
+          width:100%;
+          height:400px;
+          background-image:url('../img/content/content.jpg');
+          background-size:cover;
+          background-position:center center;
+          @include bp(700px){
+            width:50%;
+            height:100%;
+            padding-top:0;
+            padding-bottom:0;
           }
         }
       }
       .content__inner_full{
         width:100%;
+        padding-top:4em;
+        padding-bottom:4em;
       }
       .panel__title{
         color:$black;
